[package]
name = "enemidle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.142"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = "1.28.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[dependencies.eowordle-lib]
git = "https://github.com/hexdecima/eowordles-lib"
rev = "a91cbd38534c61e9091f92cab3e77d283b52abe3"

[profile.release]
lto = true
strip = "symbols"
