[package]
name = "enemidle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.142"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.6"
tokio = "1.28.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[dependencies.eowordle-lib]
git = "https://github.com/hexdecima/eowordles-lib"
rev = "4b3f663fc7b93c9d8131cd126f05496be4f3d214"

[profile.release]
lto = true
strip = "symbols"
